--- a/index.html
+++ b/index.html
@@ -10,37 +10,42 @@
 </head>
 
 <body>
-    <div id="content">
-        <img src="assets/background_halle6_crop.png" alt="">
-        <div id="container">
-            <div id="navbar">
-                <div id="logo">
-                    <img src="assets/nantes_univ_logo.png" alt="">
-                </div>
-                <ul>
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+    <div id="container">
+        <div id="navbar">
+            <div id="logo">
+                <img src="assets/nantes_univ_logo.png" alt="">
             </div>
-            <div id="content">
-
-                <model-viewer src="assets/Drossel.gltf" alt="model robot" auto-rotate camera-controls ar ios-src="assets/Drossel.gltf"></model-viewer>
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            <img src="assets/background_halle6.png" alt="">
+            <model-viewer src="assets/Drossel.gltf" alt="model robot" auto-rotate camera-controls ar ios-src="assets/Drossel.gltf"></model-viewer>
+        </div>
+        <div id="content">
+            <h2>MODÈLE 3D D'UNE PALE D'HÉLICE</h2>
+            <p>Histoire de la pale : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque laboriosam, sapiente veniam quae perferendis sunt cumque iusto distinctio totam facilis. Obcaecati minima at magni eligendi ipsum hic officia iure ipsam?</p>
+            <button>Find More</button>
+        </div>
+        <div id="icons">
+            <div id="iconsLogo">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-twitter"></i>
             </div>
-            <div id="content">
-                <h2>MODÈLE 3D D'UNE PALE D'HÉLICE</h2>
-                <p>Histoire de la pale : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque laboriosam, sapiente veniam quae perferendis sunt cumque iusto distinctio totam facilis. Obcaecati minima at magni eligendi ipsum hic officia iure ipsam?</p>
-                <button>Find More</button>
+        </div>
+        <div id="pagination">
+            <div id="leftBtn">
+                <i class="fas fa-angle-left"></i>
             </div>
-            <div id="icons">
-                <div id="iconsLogo">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
-                </div>
+            <div id="rightBtn">
+                <i class="fas fa-angle-right"></i>
             </div>
         </div>
     </div>
